# ChangeLog for dev-ruby/cliver
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

*cliver-0.3.1 (04 Dec 2013)

  04 Dec 2013; Hans de Graaff <graaff@gentoo.org> +cliver-0.3.1.ebuild:
  Initial import. Dependency of poltergeist.
