@@ -1,1 +1,2 @@
 DIST cliver-0.3.1.gem 16384 SHA256 00d97bacc0080cacefa90e4cef47b649312ecee43ba703c5e41884ecee532579 SHA512 36277bcc3c12ec5abe15afa71f3b85f4f6edfbe35c647aa1326fd0b2b6598cbd48a25dac989ce939990df578c8185fce8a8e240b114845f0c9f0b11aaf72348b WHIRLPOOL 0a7af312095ac79a9fd1c031a433abe71066e3e1c75122733aac5cb978764c0277cad63a0d2d2160a31a47d20ba9f5368abc7082e433f1a90971f2aeadf6661d
+DIST cliver-0.3.2.gem 16384 SHA256 8775445218c612bb57f50c392c4906a1ab5cca067eab093bde3cc77d6426ce24 SHA512 db0eff5119b84b4390f0c2f3e68cab891daedbf06eae55267c798787172734d3355cd82f2b6775e54fca26ed54c6ad4688743af588c76aa0ec6507a77443362f WHIRLPOOL b4bbc2bb427767bf3a03502a13e36be49dd51c9050162b63bf5d8d135ea78e4008d83496a32335142d8a2e9587308a939d7628d62946452ce92074c2b2c6e0da
