@@ -2,6 +2,11 @@
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*cliver-0.3.2 (13 Dec 2013)
+
+  13 Dec 2013; Hans de Graaff <graaff@gentoo.org> +cliver-0.3.2.ebuild:
+  Version bump.
+
 *cliver-0.3.1 (04 Dec 2013)
 
   04 Dec 2013; Hans de Graaff <graaff@gentoo.org> +cliver-0.3.1.ebuild:
